--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,21 +13,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18'
 
-      - name: Install dependencies
+      - name: Install backend dependencies
+        working-directory: ./backend
         run: npm install
 
-      - name: Run tests
+      - name: Run backend tests
+        working-directory: ./backend
         run: npm test
 
-      - name: Build Docker image
-        run: docker build -t todo-app-backend .
+      - name: Build backend Docker image
+        working-directory: ./backend
+        run: docker build -t todo-backend .
 
-
+    
