--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,12 +11,15 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    env:
+      # Secreto con la URI de tu base de datos de pruebas en Atlas
+      MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
@@ -33,4 +36,26 @@ jobs:
         working-directory: ./backend
         run: docker build -t todo-backend .
 
-    
+  # (Opcional) ejemplo de job para push a GHCR:
+  docker-build-and-push:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: Build and push Docker image
+        working-directory: ./backend
+        run: |
+          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/todo-backend:latest
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
