--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,21 +21,16 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Debug: echo first 5 chars of MONGODB_URI_TEST
-        run: |
-          echo "${MONGODB_URI_TEST:0:5}... (length: ${#MONGODB_URI_TEST})"
-
       - name: Install backend dependencies
-        working-directory: ./backend
+        working-directory: backend
         run: npm install
 
       - name: Run backend tests
-        working-directory: ./backend
+        working-directory: backend
         run: |
-          # Aumentar timeout de Jest a 30s
           echo "jest.setTimeout(30000);" > jest.setup.js
           npm test -- --setupFiles jest.setup.js
 
       - name: Build backend Docker image
-        working-directory: ./backend
+        working-directory: backend
         run: docker build -t todo-backend .
