--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
-      - MONGODB_URI=mongodb+srv://admin:1234@cluster-todolist.9l6jcyo.mongodb.net/todoDB?retryWrites=true&w=majority&appName=Cluster-todoList
+      - MONGODB_URI=${MONGODB_URI}
+
     restart: unless-stopped
 
   frontend:
