Conectar a la BD en modo producción o en modo test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - PORT=3000
       - MONGODB_URI=${MONGODB_URI}
+      - NODE_ENV=production
 
     restart: unless-stopped
 
