--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,23 +2,23 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: 
+    branches:
       - main
   pull_request:
     branches:
       - main
 
 jobs:
-  build-and-test:
+  build-test-and-deploy:
     runs-on: ubuntu-latest
     env:
-      MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
+      NODE_ENV: test
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
@@ -27,16 +27,19 @@ jobs:
         working-directory: ./backend
         run: npm install
 
-      - name: Run backend tests
+      - name: Run tests
         working-directory: ./backend
         env:
-          MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
-          NODE_ENV: test
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
         run: |
-          echo "MONGODB_URI_TEST=${MONGODB_URI_TEST}" > .env.test
+          echo "MONGODB_URI=${MONGODB_URI}" > .env.test
           npm test -- --testTimeout=60000
 
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build backend Docker image
+      - name: Build and push Docker image
         working-directory: ./backend
-        run: docker build -t todo-backend .
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest
