Pipeline CI/CD completo

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,42 +4,50 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build-test-and-deploy:
     runs-on: ubuntu-latest
+
     env:
-      NODE_ENV: test
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
     steps:
-      - name: Checkout repo
+      - name: 🔄 Clonar repositorio
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: 🔧 Configurar Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: Install backend dependencies
+      - name: 📦 Instalar dependencias backend
         working-directory: ./backend
         run: npm install
 
-      - name: Run tests
+      - name: 🧪 Ejecutar tests
         working-directory: ./backend
         env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          NODE_ENV: test
+          MONGODB_URI: ${{ secrets.MONGODB_URI_TEST }}
         run: |
           echo "MONGODB_URI=${MONGODB_URI}" > .env.test
           npm test -- --testTimeout=60000
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: 🐳 Login a Docker Hub
+        run: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
 
-      - name: Build and push Docker image
+      - name: 🏗️ Build de imagen Docker
         working-directory: ./backend
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/todo-backend .
+
+      - name: 📤 Push de imagen a Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/todo-backend
+
+      - name: 🚀 Desplegar en Render
+        run: curl -X GET "https://api.render.com/deploy/srv-d16fapp5pdvs73f8ihb0?key=x7GqkIBUKvU"
+
+
