--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,11 +28,10 @@ jobs:
 
       - name: 🧪 Ejecutar tests
         working-directory: ./backend
-        run: |
-          echo "MONGODB_URI=${{ secrets.MONGODB_URI_TEST }}" > .env.test
-          echo "PORT=3001" >> .env.test
-          cat .env.test
-          npm test -- --testTimeout=60000
+        env:
+          NODE_ENV: test
+          MONGODB_URI: ${{ secrets.MONGODB_URI_TEST }}
+        run: npm test -- --testTimeout=60000
 
       - name: 🐳 Login a Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
