--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
-  "start": "node index.js",
-  "test": "cross-env NODE_ENV=test jest"
-},
-
+  "scripts": {
+    "start": "node index.js",
+    "test": "cross-env NODE_ENV=test jest"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
